Remove usage of mapping in 'domain' frontend objects
